--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -15,9 +15,9 @@ body {
 *,
 *:before,
 *:after {
-  -webkit-border-sizing: border-box;
-  -moz-border-sizing: border-box;
-  border-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .container {
